Update StaticticsController
