# openapi/oh.yaml
@@ -4503,6 +4503,146 @@ paths:
                 type: boolean
       security:
       - bearerAuth: []
+  /statistics/pathologiesbyagegender:
+    get:
+      tags:
+      - Statistics
+      operationId: printPathologiesByAgeGenderPdf
+      parameters:
+      - name: fromDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date
+      - name: toDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date
+      responses:
+        "200":
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+      security:
+      - bearerAuth: []
+  /statistics/pathologies:
+    get:
+      tags:
+      - Statistics
+      operationId: printPathologiesPdf
+      parameters:
+      - name: fromDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date
+      - name: toDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date
+      responses:
+        "200":
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+      security:
+      - bearerAuth: []
+  /statistics/dischargesstatistics:
+    get:
+      tags:
+      - Statistics
+      operationId: printDischargesPdf
+      parameters:
+      - name: fromDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date
+      - name: toDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date
+      responses:
+        "200":
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+      security:
+      - bearerAuth: []
+  /statistics/death:
+    get:
+      tags:
+      - Statistics
+      operationId: printDeathReportPdf
+      parameters:
+      - name: fromDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date-time
+      - name: toDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date-time
+      responses:
+        "200":
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+      security:
+      - bearerAuth: []
+  /statistics/admission:
+    get:
+      tags:
+      - Statistics
+      operationId: getAdmissionReportPdf
+      parameters:
+      - name: fromDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date-time
+      - name: toDate
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date-time
+      responses:
+        "200":
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+      security:
+      - bearerAuth: []
   /settings:
     get:
       tags:
@@ -4655,34 +4795,6 @@ paths:
                 format: binary
       security:
       - bearerAuth: []
-  /reports/death:
-    get:
-      tags:
-      - Reports
-      operationId: printDeathReportPdf
-      parameters:
-      - name: fromDate
-        in: query
-        required: true
-        schema:
-          type: string
-          format: date-time
-      - name: toDate
-        in: query
-        required: true
-        schema:
-          type: string
-          format: date-time
-      responses:
-        "200":
-          description: OK
-          content:
-            application/octet-stream:
-              schema:
-                type: string
-                format: binary
-      security:
-      - bearerAuth: []
   /reports/cross-reference/{patId}/{admId}:
     get:
       tags:
@@ -4701,34 +4813,6 @@ paths:
         schema:
           type: integer
           format: int32
-      responses:
-        "200":
-          description: OK
-          content:
-            application/octet-stream:
-              schema:
-                type: string
-                format: binary
-      security:
-      - bearerAuth: []
-  /reports/admission:
-    get:
-      tags:
-      - Reports
-      operationId: getAdmissionReportPdf
-      parameters:
-      - name: fromDate
-        in: query
-        required: true
-        schema:
-          type: string
-          format: date-time
-      - name: toDate
-        in: query
-        required: true
-        schema:
-          type: string
-          format: date-time
       responses:
         "200":
           description: OK
@@ -7626,13 +7710,13 @@ components:
           format: int32
           description: lock
           example: 0
-        opd:
-          type: boolean
-        male:
+        pharmacy:
           type: boolean
         female:
           type: boolean
-        pharmacy:
+        male:
+          type: boolean
+        opd:
           type: boolean
       required:
       - beds
@@ -8598,11 +8682,11 @@ components:
           type: string
           description: Improvement feedback
           example: Patient showing significant improvement
+        fhu:
+          type: string
         yprog:
           type: integer
           format: int32
-        fhu:
-          type: string
       required:
       - admDate
       - admitted
